@@ -3,6 +3,9 @@
 	* src/vanilla.cpp (europeanOptionEngine): Update dividend case to
 	(initially deprecated, now removed) changes in upstream QuantLib
 
+	* src/utils.cpp: Update to Euribor* deprecation, conditional on
+	using QuantLb 1.35 or later
+
 2024-05-25  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Use tinyverse.netlify.app for dependency badge
